--- a/package.json
+++ b/package.json
@@ -36,9 +36,8 @@
     "eslint-config-next": "14.1.0",
     "jsdom": "^24.0.0",
     "postcss": "^8",
-    "standard": "17.1.0",
+    "supabase": "^1.167.4",
     "tailwindcss": "^3.3.0",
-    "ts-standard": "12.0.2",
     "vitest": "^1.5.0"
   }
 }
