--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@supabase/supabase-js": "^2.39.7",
     "@tabler/icons-react": "^2.47.0",
     "framer-motion": "^11.0.23",
+    "just-debounce-it": "^3.2.0",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
